--- a/views/reportes/gestionesPorHora.twig
+++ b/views/reportes/gestionesPorHora.twig
@@ -27,6 +27,8 @@
                             <th>15</th>
                             <th>16</th>
                             <th>17</th>
+                            <th>18</th>
+                            <th>19</th>
                             <th>TOTAL GENERAL</th>
 						</tr>
 						</thead>
@@ -44,6 +46,8 @@
                             <td style="text-align: center;" v-html="d.hora_15"></td>
                             <td style="text-align: center;" v-html="d.hora_16"></td>
                             <td style="text-align: center;" v-html="d.hora_17"></td>
+                            <td style="text-align: center;" v-html="d.hora_18"></td>
+                            <td style="text-align: center;" v-html="d.hora_19"></td>
                             <td style="text-align: center;" v-html="d.total"></td>
 						</tr>
 						</tbody>
@@ -61,6 +65,8 @@
                             <td style="text-align: center; font-weight: bold;" v-html="total.total_15"></td>
                             <td style="text-align: center; font-weight: bold;" v-html="total.total_16"></td>
                             <td style="text-align: center; font-weight: bold;" v-html="total.total_17"></td>
+                            <td style="text-align: center; font-weight: bold;" v-html="total.total_18"></td>
+                            <td style="text-align: center; font-weight: bold;" v-html="total.total_19"></td>
                             <td style="text-align: center; font-weight: bold;" v-html="total.total_general"></td>
                         </tr>
                         </tfoot>
