--- a/views/reportes/general.twig
+++ b/views/reportes/general.twig
@@ -120,6 +120,9 @@
             data: {
                 datos: [],
                 total: [],
+                resumen_totales: [],
+                total_resumen_totales: [],
+                resumen_totales_foot: [],
             },
             watch: {},
             computed: {},
