--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -280,6 +280,19 @@
                         </div>
                     </div>
 
+                    <div class=" row mb-4">
+                        <label for="inputName" class="col-md-2 form-label"></label>
+                        <div class="col-md-4 col-informacion"></div>
+
+                        <label for="inputName" class="col-md-2 form-label">SUGERENCIA CORREO</label>
+                        <div class="col-md-4 col-informacion">
+                            <select class="form-control form-select select2" v-model="seguimiento.sugerencia_correo" id="sugerencia_correo" v-autoname>
+                                <option value="SI">SI</option>
+                                <option value="NO">NO</option>
+                            </select>
+                        </div>
+                    </div>
+
                     <div id="div_fecha_compromiso_pago">
                         <div class=" row mb-4">
                             <label for="inputName" class="col-md-2 form-label">FECHA COMPROMISO DE PAGO</label>
