--- a/views/reportes/filtrosNegociacionesManual.twig
+++ b/views/reportes/filtrosNegociacionesManual.twig
@@ -29,9 +29,11 @@
 					<b>Fecha Inicio</b> <br>
 					{{ text_field_tag("fecha_inicio", '', {class:'form-control fecha'}) }}
 					<select class="form-control form-select select2" name="hora_inicio" id="hora_inicio" style="width: 60px;">
+						<option value=""></option>
 						<option v-for="(v,k) in horas" v-html="v" :value="k"></option>
 					</select> :
 					<select class="form-control form-select select2" name="minuto_inicio" id="minuto_inicio" style="width: 60px;">
+						<option value=""></option>
 						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>
 					</select>
 				</div>
@@ -40,9 +42,11 @@
 					<b>Fecha Fin</b> <br>
 					{{ text_field_tag("fecha_fin", '', {class:'form-control fecha'}) }}
 					<select class="form-control form-select select2" name="hora_fin" id="hora_fin" style="width: 60px;">
+						<option value=""></option>
 						<option v-for="(v,k) in horas" v-html="v" :value="k"></option>
 					</select> :
 					<select class="form-control form-select select2" name="minuto_fin" id="minuto_fin" style="width: 60px;">
+						<option value=""></option>
 						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>
 					</select>
 				</div>
