--- a/views/reportes/filtrosNegociacionesEjecutivo.twig
+++ b/views/reportes/filtrosNegociacionesEjecutivo.twig
@@ -69,10 +69,10 @@
             });
 
             $(function () {
-				$("#hora_inicio").val('0');
-				$("#minuto_inicio").val('0');
-				$("#hora_fin").val('0');
-				$("#minuto_fin").val('0');
+				$("#hora_inicio").val('');
+				$("#minuto_inicio").val('');
+				$("#hora_fin").val('');
+				$("#minuto_fin").val('');
                 $('.fecha').datepicker({
                     dateFormat: 'yy-mm-dd',
                     showButtonPanel: true
