--- a/views/reportes/filtrosReporteHoras.twig
+++ b/views/reportes/filtrosReporteHoras.twig
@@ -6,21 +6,31 @@
 		<form id="filtros">
 			<div class="row ">
 				<div class="col-sm-3">
-					<b>Marca</b> <br>
+					<b>Canal</b> <br>
 					<div class="input-group">
-						<select class="form-control select2" name="marca[]" id="marca" multiple>
+						<select class="form-control select2" name="canal_usuario[]" id="canal_usuario" multiple>
 							<option value=""></option>
-							<option v-for="(v,k) in marca" v-html="v" :value="k"></option>
+							<option v-for="(v,k) in canal_usuario" v-html="v" :value="k"></option>
 						</select>
 					</div>
 				</div>
 
 				<div class="col-sm-3">
-					<b>Campaña</b> <br>
+					<b>Campaña con ECE</b> <br>
 					<div class="input-group">
-						<select class="form-control select2" name="campana[]" id="campana" multiple>
+						<select class="form-control select2" name="campana_ece[]" id="campana_ece" multiple>
 							<option value=""></option>
-							<option v-for="(v,k) in campana_asignacion" v-html="v" :value="k"></option>
+							<option v-for="(v,k) in campana_ece" v-html="v" :value="k"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
+					<b>Campaña usuario</b> <br>
+					<div class="input-group">
+						<select class="form-control select2" name="campana_usuario[]" id="campana_usuario" multiple>
+							<option value=""></option>
+							<option v-for="(v,k) in campana_usuario" v-html="v" :value="k"></option>
 						</select>
 					</div>
 				</div>
@@ -36,11 +46,21 @@
 				</div>
 
 				<div class="col-sm-3">
-					<b>Canal</b> <br>
+					<b>Ciclo</b> <br>
 					<div class="input-group">
-						<select class="form-control select2" name="canal_usuario[]" id="canal_usuario" multiple>
+						<select class="form-control select2" name="ciclo[]" id="ciclo" multiple>
 							<option value=""></option>
-							<option v-for="(v,k) in canal_usuario" v-html="v" :value="k"></option>
+							<option v-for="(v,k) in ciclo_asignacion" v-html="v" :value="k"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
+					<b>Marca</b> <br>
+					<div class="input-group">
+						<select class="form-control select2" name="marca[]" id="marca" multiple>
+							<option value=""></option>
+							<option v-for="(v,k) in marca" v-html="v" :value="k"></option>
 						</select>
 					</div>
 				</div>
@@ -49,9 +69,11 @@
 					<b>Fecha Inicio</b> <br>
 					{{ text_field_tag("fecha_inicio", '', {class:'form-control fecha'}) }}
 					<select class="form-control form-select select2" name="hora_inicio" id="hora_inicio" style="width: 60px;">
+						<option value=""></option>
 						<option v-for="(v,k) in horas" v-html="v" :value="k"></option>
 					</select> :
 					<select class="form-control form-select select2" name="minuto_inicio" id="minuto_inicio" style="width: 60px;">
+						<option value=""></option>
 						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>
 					</select>
 				</div>
@@ -60,12 +82,15 @@
 					<b>Fecha Fin</b> <br>
 					{{ text_field_tag("fecha_fin", '', {class:'form-control fecha'}) }}
 					<select class="form-control form-select select2" name="hora_fin" id="hora_fin" style="width: 60px;">
+						<option value=""></option>
 						<option v-for="(v,k) in horas" v-html="v" :value="k"></option>
 					</select> :
 					<select class="form-control form-select select2" name="minuto_fin" id="minuto_fin" style="width: 60px;">
+						<option value=""></option>
 						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>
 					</select>
 				</div>
+
 			</div>
 		</form>
 	</div>
@@ -77,12 +102,15 @@
             var appFiltros = new Vue({
                 el: '#filtros',
                 data: {
-                    canal_usuario: {{ canal_usuario|raw }},
-                    plaza_usuario: {{ plaza_usuario|raw }},
-                    horas: {{ horas|raw }},
-                    minutos: {{ minutos|raw }},
+					canal_usuario: {{ canal_usuario|raw }},
+					plaza_usuario: {{ plaza_usuario|raw }},
+					horas: {{ horas|raw }},
+					minutos: {{ minutos|raw }},
 					campana_asignacion: {{ campana_asignacion|raw }},
+					campana_ece: {{ campana_ece|raw }},
+					campana_usuario: {{ campana_usuario|raw }},
 					marca: {{ marca|raw }},
+					ciclo_asignacion: {{ ciclo_asignacion|raw }},
                 },
                 methods: {},
             });
