--- a/views/reportes/general.twig
+++ b/views/reportes/general.twig
@@ -188,7 +188,15 @@
                             theme: "classic",
                             initSelection: function(element, callback) {}
                         });
-                        self.consultar();
+                        $("#campana_ece").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#campana_usuario").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        // self.consultar();
                     });
                     $('.select2').select2({
                         theme: "classic"
