reporte por horas

--- a/views/reportes/general.twig
+++ b/views/reportes/general.twig
@@ -196,6 +196,10 @@
                             theme: "classic",
                             initSelection: function(element, callback) {}
                         });
+                        $("#marca").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
                         // self.consultar();
                     });
                     $('.select2').select2({
