--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -3188,22 +3188,22 @@
                     if((self.seguimiento.nivel_1_id == '1855') && (self.bandera_unificar_deuda == 'no')){
                         $(".seguimiento_general").hide();
                         if(self.aplicativo_diners_tarjeta_diners.length != 0){
-                            if(parseFloat(self.aplicativo_diners_tarjeta_diners.saldo_total) > 0) {
+                            if(self.aplicativo_diners_tarjeta_diners.motivo_cierre != 'PAGADA') {
                                 $("#div_seguimiento_diners").show();
                             }
                         }
                         if(self.aplicativo_diners_tarjeta_interdin.length != 0){
-                            if(parseFloat(self.aplicativo_diners_tarjeta_interdin.saldo_total) > 0) {
+                            if(self.aplicativo_diners_tarjeta_interdin.motivo_cierre != 'PAGADA') {
                                 $("#div_seguimiento_interdin").show();
                             }
                         }
                         if(self.aplicativo_diners_tarjeta_discover.length != 0){
-                            if(parseFloat(self.aplicativo_diners_tarjeta_discover.saldo_total) > 0) {
+                            if(self.aplicativo_diners_tarjeta_discover.motivo_cierre != 'PAGADA') {
                                 $("#div_seguimiento_discover").show();
                             }
                         }
                         if(self.aplicativo_diners_tarjeta_mastercard.length != 0){
-                            if(parseFloat(self.aplicativo_diners_tarjeta_mastercard.saldo_total) > 0) {
+                            if(self.aplicativo_diners_tarjeta_mastercard.motivo_cierre != 'PAGADA') {
                                 $("#div_seguimiento_mastercard").show();
                             }
                         }
