reporte de negociaciones

--- a/views/reportes/negociacionesManual.twig
+++ b/views/reportes/negociacionesManual.twig
@@ -80,9 +80,10 @@
 	</form>
 
 	{# <script src="http://d3js.org/d3.v3.min.js"></script> #}
-	{{ bundle('validate') }}
-	{{ bundle('boot_select') }}
-	{{ script('js/jquery.serialize-object.min.js') }}
+    {{ bundle('validate') }}
+    {{ bundle('boot_select') }}
+    {{ script('js/jquery.serialize-object.min.js') }}
+    {{ bundle('select2') }}
 
 	<script type="text/javascript">
         var app = new Vue({
@@ -124,7 +125,50 @@
                     });
                     $('#btnTodos').click(function () {
                         form[0].reset();
-                        self.consultar();
+                        $("#plaza_usuario").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#canal_usuario").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#hora_inicio").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#minuto_inicio").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#hora_fin").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#minuto_fin").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#campana").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#campana_ece").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#campana_usuario").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#marca").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        // self.consultar();
+                    });
+                    $('.select2').select2({
+                        theme: "classic"
                     });
                     // self.consultar();
                 });
