--- a/views/reportes/filtrosNegociacionesManual.twig
+++ b/views/reportes/filtrosNegociacionesManual.twig
@@ -8,7 +8,7 @@
 				<div class="col-sm-3">
 					<b>Canal</b> <br>
 					<div class="input-group">
-						<select class="form-control form-select select2" name="canal_usuario" id="canal_usuario">
+						<select class="form-control select2" name="canal_usuario[]" id="canal_usuario" multiple>
 							<option value=""></option>
 							<option v-for="(v,k) in canal_usuario" v-html="v" :value="k"></option>
 						</select>
@@ -16,9 +16,9 @@
 				</div>
 
 				<div class="col-sm-3">
-					<b>Plaza</b> <br>
+					<b>Zona</b> <br>
 					<div class="input-group">
-						<select class="form-control form-select select2" name="plaza_usuario" id="plaza_usuario">
+						<select class="form-control select2" name="plaza_usuario[]" id="plaza_usuario" multiple>
 							<option value=""></option>
 							<option v-for="(v,k) in plaza_usuario" v-html="v" :value="k"></option>
 						</select>
@@ -55,16 +55,21 @@
 	</div>
 	<div class="card-footer">
 		<button id="btnFiltro" class="btn btn-success"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
-		<button id="btnTodos" class="btn btn-success"><i class="fa fa-eye"></i> Ver todos</button>
+		<button id="btnTodos" class="btn btn-success"><i class="fa fa-eraser"></i> Limpiar filtros</button>
 		{% include "reportes/loader.twig" %}
 		<script>
             var appFiltros = new Vue({
                 el: '#filtros',
                 data: {
-                    canal_usuario: {{ canal_usuario|raw }},
-                    plaza_usuario: {{ plaza_usuario|raw }},
-                    horas: {{ horas|raw }},
-                    minutos: {{ minutos|raw }},
+					canal_usuario: {{ canal_usuario|raw }},
+					plaza_usuario: {{ plaza_usuario|raw }},
+					horas: {{ horas|raw }},
+					minutos: {{ minutos|raw }},
+					campana_asignacion: {{ campana_asignacion|raw }},
+					campana_ece: {{ campana_ece|raw }},
+					campana_usuario: {{ campana_usuario|raw }},
+					marca: {{ marca|raw }},
+					ciclo_asignacion: {{ ciclo_asignacion|raw }},
                 },
                 methods: {},
             });
