--- a/views/reportes/procesadasLiquidacion.twig
+++ b/views/reportes/procesadasLiquidacion.twig
@@ -39,7 +39,7 @@
 							<td v-html="d.nombres"></td>
 							<td v-html="d.cedula"></td>
 							<td v-html="d.edad_cartera"></td>
-							<td v-html="d.nombre_tarjeta"></td>
+							<td v-html="d.tarjeta"></td>
 							<td v-html="d.campana_ece"></td>
 							<td v-html="d.inicio"></td>
 							<td v-html="d.fin"></td>
